==> RT-Thread/rt-thread/bsp/hc32/libraries/hc32_drivers/drv_qspi.c <==
#include <rtthread.h>
#include <rtdevice.h>
#include "drv_qspi.h"
#include "board_config.h"
#define LOG_TAG                         "drv.qspi"
#include <drv_log.h>
#define QSPI_READ_FUNC                  (0U)
#define QSPI_WRITE_FUNC                 (1U)
#define QSPI_DIRECT_COMM_LINE_ONE       (0U)
#define QSPI_DIRECT_COMM_LINE_MULTI     (1U)
#define QSPI_BASE_BLK_SIZE              (0x4000000UL)
#define QSPI_MAX_FLASH_ADDR             (0xFC000000UL)
#define QSPI_MAX_DIV_VAL                (0x3FU) /* Div64 */
#define QSPI_3LINE_STD_RD               (0x03U)
#define QSPI_3LINE_FAST_RD              (0x0BU)
#define QSPI_3LINE_DUAL_OUTPUT_FAST_RD  (0x3BU)
#define QSPI_3LINE_DUAL_IO_FAST_RD      (0xBBU)
#define QSPI_3LINE_QUAD_OUTPUT_FAST_RD  (0x6BU)
#define QSPI_3LINE_QUAD_IO_FAST_RD      (0xEBU)
#define QSPI_4LINE_STD_RD               (0x13U)
#define QSPI_4LINE_FAST_RD              (0x0CU)
#define QSPI_4LINE_DUAL_OUTPUT_FAST_RD  (0x3CU)
#define QSPI_4LINE_DUAL_IO_FAST_RD      (0xBCU)
#define QSPI_4LINE_QUAD_OUTPUT_FAST_RD  (0x6CU)
#define QSPI_4LINE_QUAD_IO_FAST_RD      (0xECU)

static int hc32_qspi_init(struct rt_qspi_device *device, struct rt_qspi_configuration *qspi_cfg)
{
    int result = RT_EOK;
    uint32_t u32Cnt = 1;
    uint32_t u32BusFreq;
    stc_qspi_init_t stcQspiInit = QSPI_INIT_PARAMS;

    RT_ASSERT(device != RT_NULL);
    RT_ASSERT(qspi_cfg != RT_NULL);

    struct rt_spi_configuration *cfg = &qspi_cfg->parent;
    struct hc32_qspi_bus *qspi_bus = device->parent.bus->parent.user_data;
    /* Get BUS clock */
    u32BusFreq = CLK_GetBusClockFreq(CLK_BUS_HCLK);
    while (cfg->max_hz < u32BusFreq / (u32Cnt + 1U))
    {
        if (++u32Cnt == QSPI_MAX_DIV_VAL)   /* Div64 */
        {
            break;
        }
    }
    stcQspiInit.u32ClockDiv = (u32Cnt << QSPI_CR_DIV_POS);
    if (!(cfg->mode & RT_SPI_CPOL))
    {
        stcQspiInit.u32SpiMode = QSPI_SPI_MD0;  /* QSPI MODE0 */
    }
    else
    {
        stcQspiInit.u32SpiMode = QSPI_SPI_MD3;  /* QSPI MODE3 */
    }
    /* Enable qspi clock */
    FCG_Fcg1PeriphClockCmd(qspi_bus->config->clock, ENABLE);
    /* qspi port init */
    rt_hw_qspi_board_init();
    /* Init QSPI */
    stcQspiInit.u32ReadMode       = QSPI_RD_MD_STD_RD;
    stcQspiInit.u32DummyCycle     = QSPI_DUMMY_CYCLE4;
    stcQspiInit.u32AddrWidth      = QSPI_ADDR_WIDTH_24BIT;
    (void)QSPI_Init(&stcQspiInit);
    QSPI_SetWpPinLevel(QSPI_WP_PIN_LEVEL);
    /* Enable error interrupt */
    NVIC_EnableIRQ(qspi_bus->config->err_irq.irq_config.irq_num);
    LOG_D("qspi init success!");

#ifdef BSP_QSPI_USING_DMA
    struct dma_config *qspi_dma;
    stc_dma_init_t stcDmaInit;

    /* Get qspi dma */
    qspi_dma = qspi_bus->config->dma_qspi;
    /* Enable Dma clock */
    FCG_Fcg0PeriphClockCmd(qspi_dma->clock, ENABLE);
    /* Config Dma */
    DMA_StructInit(&stcDmaInit);
    stcDmaInit.u32DataWidth     = DMA_DATAWIDTH_8BIT;
    /* Init Dma */
    if (LL_OK != DMA_Init(qspi_dma->Instance, qspi_dma->channel, &stcDmaInit))
    {
        return -RT_ERROR;
    }
    DMA_Cmd(qspi_dma->Instance, ENABLE);
#endif /* BSP_QSPI_USING_DMA */

    return result;
}

static int32_t hc32_qspi_send_cmd(struct hc32_qspi_bus *qspi_bus, struct rt_qspi_message *message, uint8_t u8Func)
{
#ifndef BSP_QSPI_USING_SOFT_CS
    uint32_t u32ReadMode = QSPI_RD_MD_STD_RD;
    uint32_t u32DummyCycle = 0U;
    uint32_t u32AddrWidth;
    uint8_t u8Instr, u8CalcDummy = 0U;
#endif

    RT_ASSERT(qspi_bus != RT_NULL);
    RT_ASSERT(message != RT_NULL);

#ifndef BSP_QSPI_USING_SOFT_CS
    CM_QSPI_TypeDef *qspi_instance = qspi_bus->config->Instance;
    u8Instr = message->instruction.content;
    if ((QSPI_READ_FUNC == u8Func) && (LL_OK == hc32_qspi_search_rom_cmd(u8Instr)))
    {
        if ((message->instruction.qspi_lines != 1) ||
                ((message->address.qspi_lines != 1) && (message->address.qspi_lines != 2) && (message->address.qspi_lines != 4)) ||
                ((message->qspi_data_lines != 1) && (message->qspi_data_lines != 2) && (message->qspi_data_lines != 4)))
        {
            return LL_ERR_INVD_PARAM;
        }
        if (((message->address.qspi_lines == 2) && ((message->qspi_data_lines == 1) || (message->qspi_data_lines == 4))) ||
                ((message->address.qspi_lines == 4) && ((message->qspi_data_lines == 1) || (message->qspi_data_lines == 2))))
        {
            return LL_ERR_INVD_PARAM;
        }

        if ((message->instruction.qspi_lines == 1) && (message->address.qspi_lines == 1) && (message->qspi_data_lines == 1))
        {
            if (message->dummy_cycles != 0)
            {
                u32ReadMode += 1U;
                u8CalcDummy = 1U;
            }
        }
        else
        {
            u8CalcDummy = 1U;
            u32ReadMode = message->qspi_data_lines;
            if (message->address.qspi_lines == message->qspi_data_lines)
            {
                u32ReadMode += 1U;
            }
        }
        if (0U != u8CalcDummy)
        {
            if ((message->dummy_cycles < 3) || (message->dummy_cycles > 18))
            {
                return LL_ERR_INVD_PARAM;
            }
            u32DummyCycle = (message->dummy_cycles - 3) << QSPI_FCR_DMCYCN_POS;
        }

        if (message->address.size == 24)
        {
            u32AddrWidth = QSPI_ADDR_WIDTH_24BIT;
        }
        else
        {
            u32AddrWidth = QSPI_ADDR_WIDTH_32BIT_INSTR_32BIT;
        }
        /* configure register */
        MODIFY_REG32(qspi_instance->FCR, (QSPI_FCR_DMCYCN | QSPI_FCR_FOUR_BIC | QSPI_FCR_AWSL),
                     (u32DummyCycle | u32AddrWidth));
        QSPI_SetReadMode(u32ReadMode);
    }
    else
#endif
    {
#if defined (HC32F460) || defined (HC32F4A0) || defined (HC32F472)
#ifndef BSP_QSPI_USING_SOFT_CS
        if (LL_OK != hc32_qspi_check_direct_comm_param(message, QSPI_DIRECT_COMM_LINE_ONE))
        {
            return LL_ERR_INVD_PARAM;
        }
        /* Set standard read mode */
        QSPI_SetReadMode(QSPI_RD_MD_STD_RD);
#else
        if (LL_OK != hc32_qspi_check_direct_comm_param(message, QSPI_DIRECT_COMM_LINE_MULTI))
        {
            return LL_ERR_INVD_PARAM;
        }
        /* Set custom read mode */
        QSPI_SetReadMode(QSPI_RD_MD_CUSTOM_FAST_RD);
#endif
#elif defined (HC32F448)
        if (LL_OK != hc32_qspi_check_direct_comm_param(message, QSPI_DIRECT_COMM_LINE_MULTI))
        {
            return LL_ERR_INVD_PARAM;
        }
#endif
    }

    return LL_OK;
}

static rt_ssize_t qspixfer(struct rt_spi_device *device, struct rt_spi_message *message)
{
    RT_ASSERT(device != RT_NULL);
    RT_ASSERT(device->bus != RT_NULL);

    rt_size_t len = 0;
    struct rt_qspi_message *qspi_message = (struct rt_qspi_message *)message;
    struct hc32_qspi_bus *qspi_bus = device->bus->parent.user_data;
#ifdef BSP_QSPI_USING_SOFT_CS
    struct hc32_hw_qspi_cs *cs = device->parent.user_data;
#endif
    rt_int32_t length = message->length;

#ifdef BSP_QSPI_USING_SOFT_CS
    if (message->cs_take)
    {
        rt_pin_write(cs->pin, 0);
    }
#endif
    if (message->send_buf != NULL)     /* send data */
    {
        if (LL_OK != hc32_qspi_send_cmd(qspi_bus, qspi_message, QSPI_WRITE_FUNC))
        {
            LOG_E("QSPI rt_qspi_message format error!");
            goto __exit;
        }
        if (LL_OK == hc32_qspi_write(qspi_bus, qspi_message))
        {
            if (qspi_message->parent.length != 0)
            {
                len = length;
            }
            else
            {
                len = 1;
            }
        }
        else
        {
            LOG_E("QSPI send data failed!");
            goto __exit;
        }
    }
    else if (message->recv_buf != NULL)     /* recv data */
    {
        if (LL_OK != hc32_qspi_send_cmd(qspi_bus, qspi_message, QSPI_READ_FUNC))
        {
            LOG_E("QSPI rt_qspi_message format error!");
            goto __exit;
        }
        if (LL_OK == hc32_qspi_read(qspi_bus, qspi_message))
        {
            len = length;
        }
        else
        {
            LOG_E("QSPI recv data failed!");
            goto __exit;
        }
    }
__exit:
#ifdef BSP_QSPI_USING_SOFT_CS
    if (message->cs_release)
    {
        rt_pin_write(cs->pin, 1);
    }
#endif

    return len;
}

static int rt_hw_qspi_bus_init(void)
{
    hc32_get_qspi_info();
    /* register the handle */
#if defined (HC32F460) || defined (HC32F4A0)
    hc32_install_irq_handler(&qspi_bus_obj.config->err_irq.irq_config, qspi_bus_obj.config->err_irq.irq_callback, RT_FALSE);
#elif defined (HC32F448) || defined (HC32F472)
    hc32_install_independ_irq_handler(&qspi_bus_obj.config->err_irq.irq_config, RT_FALSE);
#endif

    return hc32_qspi_register_bus(&qspi_bus_obj, "qspi1");
}
